<resources>
    <string name="app_name">ஓலைச்சுவடி</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_library">MyLibrary</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_my_community">MyCommunity</string>
    <string name="Categories">CATEGORIES</string>
    <string name="My_Library">MY LIBRARY</string>
    <string name="My_Community">MY COMMUNITY</string>
    <string name="My_Cart">MY CART</string>
    <string name="My_Account">MY ACCOUNT</string>
    <string name="My_Orders">MY ORDERS</string>
    <string name="Logout">LOGOUT</string>
    <string name="title_categories">Choose a Category</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="txt_orders">Your Orders History :</string>
    <string name="txt_addr">Change Your Address</string>
    <string name="txt_pay">PAY NOW</string>
    <string name="txt_buy">BUY NOW</string>
    <string name="txt_add2cart">Add to Cart</string>
    <string name="txt_savdaddr">Your Saved Addresses :</string>
    <string name="txt_addaddr">Add Address</string>
    <string name="edit_email">E-Mail ID</string>
    <string name="edit_pwd">Password</string>
    <string name="edit_cnfpwd">Confirm Password</string>
    <string name="edit_mob">Mobile Number</string>
    <string name="edit_uname">Username</string>
    <string name="edit_fname">First Name</string>
    <string name="edit_lname">Last Name</string>
    <string name="edit_addr">Address</string>
    <string name="edit_cty">City</string>
    <string name="edit_pin">PIN Code</string>
    <string name="edit_dist">District</string>
    <string name="edit_sname">State</string>
    <string name="btn_sub">Submit</string>
    <string name="btn_cncl">Cancel</string>
    <string name="state_prompt">Choose a State</string>
    <string-array name="state_arrays">
        <item>Andra Pradesh</item>
        <item>Bihar</item>
        <item>Assam</item>
        <item>Arunachal Pradesh</item>
        <item>Jharkhand</item>
        <item>Odisha</item>
        <item>Haryana</item>
        <item>Karnataka</item>
        <item>Jammuand Kashmir</item>
        <item>Kerala</item>
        <item>Rajasthan</item>
        <item>Gujarat</item>
        <item>Punjab</item>
        <item>Chhattisgarh</item>
        <item>Goa</item>
        <item>Sikkim</item>
        <item>Mizoram</item>
        <item>UttarPradesh</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Tamilnadu</item>
        <item>Uttarakhand </item>
        <item>Himacha lPradesh</item>
        <item>Manipur</item>
        <item>Tripura</item>
        <item>WestBengal</item>
        <item>Telangana</item>
        <item>Andamanand Nicobar Islands </item>
        <item>Chandigarh </item>
        <item>Puducherry</item>
        <item>Damanand Diu </item>
        <item>Delhi</item>
    </string-array>
    <string name="district_prompt">Choose a District</string>
    <string-array name="dist_0">
        <item> Srikakulam </item>
        <item>Vizianagaram </item>
        <item>Vishakhapatnam</item>
        <item> East Godavari</item>
        <item> West Godavari</item>
        <item>Krishna</item>
        <item> Guntur </item>
        <item>Prakasam  </item>
        <item>Nellore</item>
        <item>Kadapa</item>
        <item>Kurnool </item>
        <item>Anantapur </item>
        <item>Chittoor </item>
    </string-array>
    <string-array name="dist_1">
        <item>Araria</item>
        <item>Arwal</item>
        <item>Aurangabad</item>
        <item>Banka</item>
        <item>Begusarai</item>
        <item>Bhagalpur</item>
        <item>Buxar</item>
        <item>Darbhanga</item>
        <item>East Champaran</item>
        <item>East Champaran</item>
        <item>Gaya</item>
        <item>Gopalganj</item>
        <item>Jamui</item>
        <item>Jehanabad</item>
        <item>Kaimur</item>
        <item>Katihar</item>
        <item>Khagaria</item>
        <item>Kishanganj</item>
        <item>Lakhisarai</item>
        <item>Madhepura</item>
        <item>Monghyr</item>
        <item>Muzaffarpur</item>
        <item>Nalanda</item>
        <item>Nawada</item>
        <item>Patna</item>
        <item>Purnea</item>
        <item>Rohtas</item>
        <item>Saharsa</item>
        <item>Samastipur</item>
        <item>Saran</item>
        <item>Shiekhpura</item>
        <item>Sheohar</item>
        <item>Sitamarhi</item>
        <item>Siwan</item>
        <item>Supaul</item>
        <item>Vaishali</item>
        <item>West Champaran</item>
    </string-array>
    <string-array name="dist_2">
        <item>Barpeta</item>
        <item>Bongaigaon  </item>
        <item>	Cachar  </item>
        <item> Darrang </item>
        <item> Dhemaji  </item>
        <item>Dhubri </item>
        <item>   Dibrugarh   </item>
        <item> Goalpara </item>
        <item>  Golaghat  </item>
        <item> Hailakandi</item>
        <item>Jorhat Karbi Anglong </item>
        <item>  Karimganj  </item>
        <item> Kokrajhar     </item>
        <item> Lakhimpur   </item>
        <item> Morigaon    </item>
        <item>  Nagaon  </item>
        <item> Nalbari      </item>
        <item> Dima Hasao    </item>
        <item>Sivasagar  </item>
        <item> Sonitpur </item>
        <item>Tinsukia   </item>
        <item> Kamrup    </item>
        <item> Kamrup Metropolitan   </item>
        <item>Baksa    </item>
        <item>Udalguri    </item>
        <item>West Karbi Anglong </item>
        <item>Biswanath   </item>
        <item>Hojai   </item>
        <item>Charaideo </item>
        <item>Majuli</item>
    </string-array>
    <string-array name="dist_3">
        <item> Papumpare </item>
        <item> Changlang </item>
        <item> 	Lohit </item>
        <item>West Siang  </item>
        <item> Tirap  </item>
        <item> East Siang  </item>
        <item>Kurung Kumey </item>
        <item>West Kameng</item>
        <item>Upper Subansiri</item>
        <item>Lower Subansiri </item>
        <item> East Kameng </item>
        <item> Lower Dibang Valley  </item>
        <item> 	Tawang  </item>
        <item> Upper Siang </item>
        <item>Anjaw </item>
        <item>Dibang Valley  </item>
    </string-array>
    <string-array name="dist_4">
        <item>Bokaro</item>
        <item>Chatra</item>
        <item>Deoghar</item>
        <item>Dhanbad</item>
        <item>Dumka</item>
        <item>East_Singhbhum</item>
        <item>Garhwa</item>
        <item>Giridih</item>
        <item>Godda</item>
        <item>Gumla</item>
        <item>Hazaribagh</item>
        <item>Jamtara             </item>
        <item>Khunti             </item>
        <item>Koderma           </item>
        <item>Latehar            </item>
        <item>Lohardaga           </item>
        <item>Pakur            </item>
        <item>Palamu             </item>
        <item>Ramgarh            </item>
        <item>Ranchi           </item>
        <item>Sahebganj           </item>
        <item>Seraikela-Kharsawan  </item>
        <item>Simdega           </item>
        <item>West_Singhbhum   </item>
    </string-array>
    <string-array name="dist_5">
        <item>Angul             </item>
        <item>Balangir           </item>
        <item>Baleswar            </item>
        <item>Bargarh           </item>
        <item>Bhadrak            </item>
        <item>Boudh            </item>
        <item>Cuttack            </item>
        <item>Debagarh           </item>
        <item>Dhenkanal            </item>
        <item>Gajapati           </item>
        <item>Ganjam            </item>
        <item>Jagatsinghapur            </item>
        <item>Jajapur            </item>
        <item>Jharsuguda           </item>
        <item>Kalahandi            </item>
        <item>Kandhamal           </item>
        <item>Kendrapara            </item>
        <item>Kendujhar            </item>
        <item>Khorda            </item>
        <item>Koraput           </item>
        <item>Malkangiri            </item>
        <item>Mayurbhanj           </item>
        <item> Nabarangapur           </item>
        <item>Nayagarh            </item>
        <item>Nuapada            </item>
        <item>Puri           </item>
        <item>Rayagada            </item>
        <item>Sambalpur           </item>
        <item>Sonapur            </item>
        <item>Sundergarh            </item>
    </string-array>
    <string-array name="dist_6">
        <item>Ambala            </item>
        <item>Bhiwani           </item>
        <item>Faridabad            </item>
        <item>Fatehabad           </item>
        <item>Gurgaon            </item>
        <item>Hisar            </item>
        <item>Jhajjar           </item>
        <item>Jind            </item>
        <item>Kaithal           </item>
        <item>Karnal            </item>
        <item>Kurukshetra           </item>
        <item>Mahendragarh           </item>
        <item>Mewat            </item>
        <item>Palwal           </item>
        <item>Panchkula            </item>
        <item>Panipat            </item>
        <item>Rewari           </item>
        <item>Rohtak            </item>
        <item>Sirsa           </item>
        <item>Sonipat            </item>
        <item>Yamuna_Nagar            </item>
    </string-array>
    <string-array name="dist_7">
        <item>Bagalkot          </item>
        <item>Bangalore           </item>
        <item>Bangalore_Rural           </item>
        <item>Belgaum            </item>
        <item>Bellary            </item>
        <item>Bidar            </item>
        <item>Bijapur(KAT)           </item>
        <item>Chamrajanagar            </item>
        <item>Chickmagalur           </item>
        <item>Chikkaballapur            </item>
        <item>Chitradurga            </item>
        <item>Dakshina_Kannada           </item>
        <item>Davangere            </item>
        <item>Dharwad           </item>
        <item>Gadag           </item>
        <item>Gulbarga            </item>
        <item>Hassan           </item>
        <item>Haveri            </item>
        <item>Kodagu           </item>
        <item>Kolar            </item>
        <item>Koppal            </item>
        <item>Mandya           </item>
        <item>Raichur            </item>
        <item>Ramanagar           </item>
        <item>Shimoga            </item>
        <item>Udupi            </item>
        <item>Uttara_Kannada           </item>
        <item>Yadgir            </item>
    </string-array>
    <string-array name="dist_8">
        <item>Anantnag           </item>
        <item>Badgam            </item>
        <item>Bandipore           </item>
        <item>Baramula            </item>
        <item>Doda           </item>
        <item>Ganderbal            </item>
        <item>Jammu           </item>
        <item>Kargil            </item>
        <item>Kathua           </item>
        <item>Kishtwar            </item>
        <item>Kishtwar           </item>
        <item>Kupwara            </item>
        <item>Leh           </item>
        <item>Pulwama            </item>
        <item>Punch           </item>
        <item>Rajouri            </item>
        <item>Ramban           </item>
        <item>Reasi            </item>
        <item>Samba           </item>
        <item>Shupiyan            </item>
        <item>Srinagar           </item>
        <item>Udhampur            </item>
    </string-array>
    <string name="prddet_desc">DESCRIPTION :</string>
    <string name="clk_to_reg"><u>Click Here to Register</u></string>
</resources>