<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_categories"
            android:icon="@mipmap/cate"
            android:title="@string/Categories" />
        <item
            android:id="@+id/nav_library"
            android:icon="@mipmap/lib"
            android:title="@string/My_Library" />
        <item
            android:id="@+id/nav_community"
            android:icon="@mipmap/comm"
            android:title="@string/My_Community" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cart"
            android:icon="@mipmap/cart"
            android:title="@string/My_Cart" />
        <item
            android:id="@+id/nav_account"
            android:icon="@mipmap/account"
            android:title="@string/My_Account" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@mipmap/orders"
            android:title="@string/My_Orders" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@mipmap/logout"
            android:title="@string/Logout" />
    </group>
</menu>
