<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_product__details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/menubg"
    android:padding="10dp"
    tools:context="com.cviac.olaichuvadi.activities.Product_Details">

    <ImageView
        android:id="@+id/prd_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/bookgrd" />

    <TextView
        android:id="@+id/tit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prd_img"
        android:layout_marginTop="10dp"
        android:text="TITLE :" />

    <TextView
        android:id="@+id/prz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tit"
        android:layout_marginTop="10dp"
        android:text="PRICE :" />

    <TextView
        android:id="@+id/pprz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ptit"
        android:layout_alignTop="@+id/prz"
        android:layout_toEndOf="@+id/prz"
        android:paddingLeft="10dp"
        android:text="Price" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cartbtn"
        android:layout_below="@+id/prz">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/prz"
                android:layout_marginTop="10dp"
                android:text="@string/prddet_desc" />

            <TextView
                android:id="@+id/desc_det"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/desc"
                android:layout_marginTop="10dp" />

        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cartbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/roundcolorbtn"
            android:text="@string/txt_add2cart"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/buybtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/roundcolorbtn"
            android:text="@string/txt_buy"
            android:textColor="#ffffff" />

    </LinearLayout>

</RelativeLayout>